# Vagyojaka-testing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.c9908a4  README.md  audiowaveform.cpp  audiowaveform.h  audiowaveform.ui  client.py  convert.qrc  icons.qrc  main.cpp  tool.cpp  tool.h  tool.ui  transcriptgenerator.cpp
.github/workflows/: build.yml
audioplayer/: audioplayerwidget.cpp  audioplayerwidget.h
docs/html/: annotated.html  class_editor-members.html  class_editor.html  class_text_editor.html  class_tool.html  doxygen_crawl.html  editor_8h.html  editor_8h_source.html  functions_m.html  functions_vars_m.html  hierarchy.html
docs/html/search/: all_d.js  variables_c.js
editor/: blockandword.h  editor.cpp  editor.h  texteditor.cpp  texteditor.h  wordlists.qrc
editor/utilities/: equationeditor.h  findreplacedialog.cpp  keyboardshortcutguide.cpp
editor/wordlists/: english.txt  hindi.txt
git/: git.cpp  git.h  git_util.h
mediaplayer/: mediaplayer.cpp  mediaplayer.h  playercontrols.cpp  playercontrols.h  videowidget.cpp
mediaplayer/utilities/: mediasplitter.cpp  mediasplitter.h
tts/: customdelegates.cpp  customdelegates.h  lazyloadingmodel.cpp  texttospeech.cpp  texttospeech.h  texttospeech.ui  ttsannotator.cpp  ttsannotator.h  ttsrow.h
